# khata

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: broker_adapter.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ADAPTERS.md  ROADMAP.md  SECURITY.md
khata/: cli.py  config.py
khata/adapters/dhan/: __init__.py  adapter.py  client.py  fees.py  mapper.py
khata/core/: adapter.py  db.py  money.py  roundtrip.py  schema.sql  store.py
khata/web/: attachments.py  helpers.py  main.py  markdown.py  queries.py
khata/web/static/: editor.js  style.css
khata/web/templates/: base.html  calendar.html  day.html  trade.html
khata/web/templates/partials/: attachments.html  note_block.html  note_meta.html  tag_list.html
tests/: conftest.py  test_attachments.py  test_dhan_mapper.py  test_roundtrip.py  test_web.py
tests/fixtures/dhan/: trades_history_page0.json  trades_today.json  trades_today_unsettled.json
